2.4.106 -> 2.4.107:
	- --nomd5 wasn't handled properly
	- updated configure.in find-req and find-prov checks (Tim Mooney)

2.4.105 -> 2.4.106:
	- build: inly check for non-printables in first 128 chars
	- added %triggerpostun
	- linux.req generates deps for shared libs
	- added a CC=@CC@ to popt/Makefile.in
	- handle signed return types from poptGetNextOpt() properly

2.4.104 -> 2.4.105:
	- added langpatt: to rpmrc, and mark files with matches
	- added some C++ cruft to rpmlib.h
	- added find-requires and find-provides for hpux (Tim Mooney)
	- respect LINGUAS when install package files
	- added trigger support to build code
	- got rid of annoying mwftw() type warning
	- fixed many command line options which got broke by changes
	  for non-gcc compilers
	- added trigger support in install code
	- added doc/triggers
	- strntoul() in lib/cpio.c was returning a pointer to freed
	  memory
	- headerAppend() was doing a bad memcpy()

2.4.103 -> 2.4.104:
	- fixed popt/Makefile.in to use CPP from configure
	- use tmppath from rpmrc to for ftp'd files (rather then /var/tmp)
	- autoconf files and .depend files weren't created properly during
	  make archive

2.4.102 -> 2.4.103:
	- need to create popt/configure during make archive
	- added comments about modifictation to base popt and rpmrc files
	- allow spaces in group names
	- fix bug in memory allocation of special doc stuff
	- Jeff Johnson's mode/dev fixes
	- clean up buildroot
	- be more paranoid about making temp files
	- added patches from Tim Mooney which let RPM build with non-gcc
	  compilers and non-GNU versions of make

2.4.101 -> 2.4.102:
	- fixed spelling of "instchangelog" in lib-rpmrc.in
	- fixed memory leak in headerSprintf() extension cache
	- fixed memory allocation for header formatting extension cache
	- added support for INSTPREFIX virtual tag for backwards compatibility
	- cpio error codes were poorly defined, causing bad error messages
	- generates INSTPREFIXES tag properly, and sets RPM_INSTALL_PREFIX