@@ -1,9 +1,10 @@
 2.4.106 -> 2.4.107:
 	- --nomd5 wasn't handled properly
 	- updated configure.in find-req and find-prov checks (Tim Mooney)
+        - make --rmsource actually work
 
 2.4.105 -> 2.4.106:
-	- build: inly check for non-printables in first 128 chars
+	- build: only check for non-printables in first 128 chars
 	- added %triggerpostun
 	- linux.req generates deps for shared libs
 	- added a CC=@CC@ to popt/Makefile.in
